# MigrateIt

./: .gitignore  .ruff.toml  .testenv  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: publish.yaml  pytests.yaml
migrateit/: cli.py  files.py  main.py  models.py  tree.py  utils.py
migrateit/clients/: __init__.py  _client.py  _protocol.py  psql.py
migrateit/models/: changelog.py
tests/: migrations_test.py  models_test.py  plan_builder_test.py  tree_utils_test.py
tests/clients/: psql_test.py
tests/clients/psql/: _base_test.py  apply_test.py  init_test.py  show_test.py  validate_test.py
tests/cmd/: new_test.py
