[metadata]
name = migrateit
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Iago Santos
license = MIT
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    psycopg2-binary
python_requires = >=3.11
dependency_links = https://github.com/iagocanalejas/pyutils.git@master#egg=pyutils

[options.entry_points]
console_scripts =
    migrateit = migrateit.cli:main
